altered attempt to fix paragraph alignment by use of containers

--- a/alternative.css
+++ b/alternative.css
@@ -132,7 +132,8 @@ footer {
 .content-with-sidebar {
   display: grid;
   grid-template-columns: 220px 1fr;
-  margin-left: 0; 
+  margin-left: 0 !important; 
+  max-width: 100% !important;
 }
 
 .sidebar {
